# TARS

./: .gitignore  README.md  TARS_OutputStructure.txt  TARS_main.py  config.json  imu_data.txt  main.txt  matrix.py  requirements.txt  side.py
Component Interfaces/: servo.py
docs/: TARS(Requirements).csv  imu_goal2_runbook.md  leg_transport_feasibility_checklist.md  leg_transport_migration_tutorial.md  one_leg_bringup.md  one_leg_bringup_runbook.md  pico_ender_connection_probe.md  pico_ender_udp_bridge.md  sd_card_flash_tutorial.md  servo_goal1_runbook.md  servo_imu_goal_runbook.md  windows_firmware_detection.md
firmware/: apply_marlin_banner_patch.sh  apply_marlin_imu_image_patch.sh  apply_marlin_imu_patch.sh  apply_marlin_servo_patch.sh  copy_imu_artifact.sh  copy_servo_artifact.sh  fix_m776_prints.sh  move_m776_into_m118.sh
firmware/ender_stepper_controller/: Makefile  README.md  linker.ld
firmware/ender_stepper_controller/include/: ender_stepper_controller_contract.h
firmware/ender_stepper_controller/src/: main.c  startup.c
firmware/ender_v4_2_2/: CMakeLists.txt  Makefile  README.md
firmware/ender_v4_2_2/docs/: hardware_task_plan.md  led_test_notes.md
firmware/ender_v4_2_2/embedded/: linker_gd32f303ret6.ld  main_gd32f303ret6.c  startup_gd32f303ret6.s
firmware/ender_v4_2_2/include/: board_config.hpp  firmware_app.hpp  tars_leg_protocol.h
firmware/ender_v4_2_2/marlin_overlay/: README.md  platformio.ini.snippet
firmware/ender_v4_2_2/marlin_overlay/config/: Configuration.h.banner_snippet  Configuration_adv.h.banner_snippet
firmware/ender_v4_2_2/marlin_overlay/patches/: banner_hook_example.cpp
firmware/ender_v4_2_2/src/: firmware_app.cpp  main.cpp
firmware/pico_leg_controller/: README.md  micropython_main.py  platformio.ini
firmware/pico_leg_controller/boards/: pico_w.json
firmware/pico_leg_controller/include/: pico_leg_controller_contract.h
firmware/pico_leg_controller/src/: main.cpp
firmware/reference/: README.md  protocol.h  reference_firmware.py
rpi/: carriage.py  imu_test.py  main.py  mpu6050.py  requirements.txt  servo.py  testThreading.py  update_l0.bash
rpi/components/: carriage.py  display.py  dummy.py  hip.py  imu.py  imu_pub.py  imu_pub_test.py  mpu6050.py.bak  tca9548a.py
rpi/config/: leg_config.json
scripts/: monitor_com18.ps1
src/: constants.py
src/b0_interface/: package.xml  setup.cfg  setup.py
src/b0_interface/b0_interface/: __init__.py  b0_interface_node.py
src/bringup/: package.xml  setup.cfg  setup.py
src/bringup/bringup/: __init__.py
src/bringup/launch/: minimal_bringup.launch.py  pico_ender_connection_probe.launch.py  pico_one_leg_bringup.launch.py
src/ender_stepper_transport/: package.xml  setup.py
src/ender_stepper_transport/ender_stepper_transport/: __init__.py  protocol.py
src/ender_stepper_transport/test/: test_ender_protocol.py
src/leg_control/: package.xml  setup.cfg  setup.py
src/leg_control/leg_control/: __init__.py  leg_command.py  leg_controller_node.py
src/leg_transport/: package.xml  setup.cfg  setup.py
src/leg_transport/leg_transport/: __init__.py  crc.py  frame.py  led_test_bridge_node.py  leg_types.py  marlin_echo_bridge_node.py  marlin_echo_protocol.py  marlin_imu_bridge_node.py  marlin_imu_protocol.py  marlin_servo_bridge_node.py  marlin_servo_imu_bridge_node.py  marlin_servo_protocol.py  protocol.py  raw_serial.py  serial_leg_bridge_node.py  serial_transport.py  watchdog.py
src/leg_transport/resource/: leg_transport
src/leg_transport/test/: test_frame.py  test_leg_types.py  test_marlin_echo_bridge.py  test_marlin_imu_bridge.py  test_marlin_servo_bridge.py  test_marlin_servo_imu_bridge.py  test_protocol.py  test_watchdog.py
src/motion/: package.xml  setup.cfg  setup.py
src/motion/motion/: __init__.py  motion_executor_node.py  motion_planner_node.py
src/motion/resource/: motion
src/pico_leg_bridge/: package.xml  setup.py
src/pico_leg_bridge/pico_leg_bridge/: __init__.py  bridge_runtime.py  connection_probe_node.py  pico_leg_bridge_node.py  protocol.py  udp_bridge_client.py
src/pico_leg_bridge/test/: test_bridge_runtime.py  test_pico_protocol.py  test_udp_bridge_client.py
src/robot_controller/: package.xml  setup.cfg  setup.py
src/robot_controller/robot_controller/: __init__.py  robot_controller_node.py
src/rpi_bridge/: package.xml  setup.cfg  setup.py
src/rpi_bridge/rpi_bridge/: rpi_bridge.py
src/state_estimation/: package.xml  setup.cfg  setup.py
src/state_estimation/state_estimation/: __init__.py  leg_pose_estimator_node.py
src/temp/: package.xml  setup.cfg  setup.py
src/temp/temp/: temp.py
tars/install/: local_setup.sh  setup.sh
tars/install/test_package/share/test_package/: package.sh  package.xml
tars/src/test_package/: setup.py
tars/src/test_package/test_package/: test_node.py
tools/: udp_bridge_probe.py
