[metadata]
name = b0_interface
version = 0.0.0
author = TARS Team
author_email = todo@example.com
description = Base station (B0) interface
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
zip_safe = false

[options.entry_points]
console_scripts =
    b0_interface = b0_interface.b0_interface_node:main

[develop]
script_dir=$base/lib/b0_interface

[install]
install_scripts=$base/lib/b0_interface
