<?xml version="1.0"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>Launch files for bringing up the software stack.</description>
  <maintainer email="todo@example.com">TARS Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>robot_controller</depend>
  <depend>motion</depend>
  <depend>leg_control</depend>
  <depend>state_estimation</depend>
  <depend>b0_interface</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

