<?xml version="1.0"?>
<package format="3">
  <name>leg_control</name>
  <version>0.0.0</version>
  <description>Leg-level control nodes for L0–L3.</description>
  <maintainer email="todo@example.com">TARS Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

