[metadata]
name = leg_control
version = 0.0.0
author = TARS Team
author_email = todo@example.com
description = Leg-level control nodes for L0–L3
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
zip_safe = false

[options.entry_points]
console_scripts =
    leg_controller = leg_control.leg_controller_node:main

[develop]
script_dir=$base/lib/leg_control

[install]
install_scripts=$base/lib/leg_control
