<?xml version="1.0"?>
<package format="3">
  <name>leg_transport</name>
  <version>0.0.0</version>
  <description>Transport adapters and embedded framing for leg devices.</description>
  <maintainer email="todo@example.com">TARS Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>leg_control</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
