[metadata]
name = motion
version = 0.0.0
author = TARS Team
author_email = todo@example.com
description = Motion planner and executor nodes
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
zip_safe = false

[options.entry_points]
console_scripts =
    motion_planner = motion.motion_planner_node:main
    motion_executor = motion.motion_executor_node:main

[develop]
script_dir=$base/lib/motion

[install]
install_scripts=$base/lib/motion
