<?xml version="1.0"?>
<package format="3">
  <name>pico_leg_bridge</name>
  <version>0.0.0</version>
  <description>Jetson-side wireless bridge for one leg Pico W controller.</description>
  <maintainer email="todo@example.com">TARS Team</maintainer>
  <license>MIT</license>

  <depend>geometry_msgs</depend>
  <depend>leg_transport</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
