[metadata]
name = robot_controller
version = 0.0.0
author = TARS Team
author_email = todo@example.com
description = Top-level robot controller and mode manager
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
zip_safe = false

[options.entry_points]
console_scripts =
    robot_controller = robot_controller.robot_controller_node:main

[develop]
script_dir=$base/lib/robot_controller

[install]
install_scripts=$base/lib/robot_controller

