[metadata]
name = state_estimation
version = 0.0.0
author = TARS Team
author_email = todo@example.com
description = Leg pose and acceleration estimation nodes
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
zip_safe = false

[options.entry_points]
console_scripts =
    leg_pose_estimator = state_estimation.leg_pose_estimator_node:main

[develop]
script_dir=$base/lib/state_estimation

[install]
install_scripts=$base/lib/state_estimation
